@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2012-12-11">
+<para>
+<link doc="en/download.xml">nginx-1.2.6</link>
+stable version has been released.
+</para>
+</event>
+
 <event date="2012-11-27">
 <para>
 <link doc="en/download.xml">nginx-1.3.9</link>
