@@ -25,6 +25,7 @@
 
 <download tag="stable" changes="1.2">
 
+<item ver="1.2.6" />
 <item ver="1.2.5" />
 <item ver="1.2.4" />
 <item ver="1.2.3" />
